# ant-rdf

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  LICENSE.md  ONTOLOGICAL_COMMITMENTS.md  README.md  abstract.md  pyproject.toml
.claude/: settings.json
adr/: 0000-foundational-decisions.md
briefs/: case-catalog.md  hotel-keys-network.md  koi-architectural-network.md  koi-catalog.md  koi-comparison.md  koi-ethnographic-network.md  scallops-network.md
ontology/: ant-prov-align.ttl  material-semiotics-core.ttl
wiki/: About.md  Actant-hotel-keys--fob.md  Actant-hotel-keys--front-desk.md  Actant-hotel-keys--guest.md  Actant-hotel-keys--hotel.md  Actant-hotel-keys--key.md  Actant-hotel-keys--manager.md  Actant-hotel-keys--sign.md  Actant-koi--beneficiary-org-members.md  Actant-koi--beneficiary-orgs.md  Actant-koi--chief-engineer.md  Actant-koi--community-participants.md  Actant-koi--data-set.md  Actant-koi--ethics-committees.md  Actant-koi--ethnographers.md  Actant-koi--forget-general.md  Actant-koi--forget-metagov.md  Actant-koi--implementation-team.md  Actant-koi--integration-teams.md  Actant-koi--koi-infrastructure.md  Actant-koi--research-collaborators.md  Actant-koi--rid.md  Actant-scallops--colleagues.md  Actant-scallops--fishermen.md  Actant-scallops--larvae-collectors.md  Actant-scallops--researchers.md  Actant-scallops--scallops.md  Case-hotel-keys.md  Case-koi.md  Case-scallops.md  Concept-Actant.md  Concept-Analysis.md  Concept-AnalysisReport.md  Concept-AntiProgram.md  Concept-BlackBox.md  Concept-Characterization.md  Concept-ConstraintWaiver.md  (+58 more)
(+138 files in other folders)
