[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ant-rdf"
version = "0.1.0"
description = "Material-semiotics / Actor-Network-Theory vocabulary and authoring tooling (docs-as-code, semantic web)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "rdflib>=7.0.0",
    "pyshacl>=0.25.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
ant = "ant_rdf.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ant_rdf"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
